fix: enabled overflow on tiny screens on landscape mode

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ a {
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: scroll;
     }
     main {
         max-width: unset;
